--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,22 +8,28 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="295*"/>
-            <ColumnDefinition Width="841*"/>
+            <ColumnDefinition Width="288*"/>
+            <ColumnDefinition Width="553*"/>
         </Grid.ColumnDefinitions>
 
         <Viewbox HorizontalAlignment="Left" Height="424" Margin="20,20,0,0" VerticalAlignment="Top" Width="512" x:Name="Viewbox1" MouseLeftButtonDown="Viewbox1_MouseLeftButtonDown" Grid.ColumnSpan="2">
             <Image Source="{Binding ImageSource}" Stretch="UniformToFill"/>
         </Viewbox>
-        <StatusBar HorizontalAlignment="Left" Height="25" Margin="20,470,0,0" VerticalAlignment="Top" Width="805" Grid.ColumnSpan="2">
+        <StatusBar HorizontalAlignment="Left" Height="25" Margin="20,470,0,0" VerticalAlignment="Top" Width="805" Grid.ColumnSpan="3">
             <StatusBarItem Content="{Binding StatusText}" Width="805"/>
         </StatusBar>
-        <CheckBox Content="WriteDown" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="613,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckWriteDown"/>
-        
-        <CheckBox Content="LockCenter" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="336,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,61,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="93" Name="textXlock"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,110,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="93" Name="textYlock"/>
-        <Label Content="X" Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="336,61,0,0" VerticalAlignment="Top" Width="81"/>
-        <Label Content="Y" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="336,110,0,0" VerticalAlignment="Top" Width="81"/>
+        <CheckBox Content="WriteDown" Grid.Column="2" HorizontalAlignment="Left" Height="20" Margin="325,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckWriteDown"/>
+
+        <CheckBox Content="LockCenter" Grid.Column="2" HorizontalAlignment="Left" Height="21" Margin="48,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="29" Margin="149,61,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="textXlock"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="29" Margin="149,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="textYlock"/>
+        <Label Content="X" Grid.Column="2" HorizontalAlignment="Left" Height="29" Margin="48,61,0,0" VerticalAlignment="Top" Width="81"/>
+        <Label Content="Y" Grid.Column="2" HorizontalAlignment="Left" Height="35" Margin="48,110,0,0" VerticalAlignment="Top" Width="81"/>
+        <CheckBox Content="RecordMultipulPoints" Grid.Column="2" HorizontalAlignment="Left" Height="18" Margin="48,184,0,0" VerticalAlignment="Top" Width="251" Name="CheckRecordMultipulPoints"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="279,221,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="279,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93"/>
+        <Label Content="Horizonal X" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="48,221,0,0" VerticalAlignment="Top" Width="130"/>
+        <Label Content="Vertial Y" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="48,262,0,0" VerticalAlignment="Top" Width="130"/>
 
 
 
