--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,14 +20,14 @@
         </StatusBar>
         <CheckBox Content="WriteDown" Grid.Column="2" HorizontalAlignment="Left" Height="20" Margin="325,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckWriteDown"/>
 
-        <CheckBox Content="LockCenter" Grid.Column="2" HorizontalAlignment="Left" Height="21" Margin="48,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter"/>
+        <CheckBox Content="LockCenter" Grid.Column="2" HorizontalAlignment="Left" Height="21" Margin="48,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter" Checked="CheckLockCenter_Checked" Unchecked="CheckLockCenter_Unchecked"/>
         <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="29" Margin="149,61,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="textXlock"/>
         <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="29" Margin="149,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="textYlock"/>
         <Label Content="X" Grid.Column="2" HorizontalAlignment="Left" Height="29" Margin="48,61,0,0" VerticalAlignment="Top" Width="81"/>
         <Label Content="Y" Grid.Column="2" HorizontalAlignment="Left" Height="35" Margin="48,110,0,0" VerticalAlignment="Top" Width="81"/>
         <CheckBox Content="RecordMultipulPoints" Grid.Column="2" HorizontalAlignment="Left" Height="18" Margin="48,184,0,0" VerticalAlignment="Top" Width="251" Name="CheckRecordMultipulPoints"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="279,221,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93"/>
-        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="279,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="279,221,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Text="0"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="279,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Text="0"/>
         <Label Content="Horizonal X" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="48,221,0,0" VerticalAlignment="Top" Width="130"/>
         <Label Content="Vertial Y" Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="48,262,0,0" VerticalAlignment="Top" Width="130"/>
 
