--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,14 +18,15 @@
             <StatusBarItem Content="{Binding StatusText}" Width="805"/>
         </StatusBar>
         <CheckBox Content="WriteDown" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="613,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckWriteDown"/>
-        
+
         <CheckBox Content="LockCenter" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="336,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,61,0,0" TextWrapping="Wrap" Text="256" VerticalAlignment="Top" Width="93" Name="textXlock"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,110,0,0" TextWrapping="Wrap" Text="212" VerticalAlignment="Top" Width="93" Name="textYlock"/>
         <Label Content="X" Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="336,61,0,0" VerticalAlignment="Top" Width="81"/>
         <Label Content="Y" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="336,110,0,0" VerticalAlignment="Top" Width="81"/>
         <CheckBox Content="NonTimeStamp" Grid.Column="1" HorizontalAlignment="Left" Height="57" Margin="613,61,0,0" VerticalAlignment="Top" Width="130" Name="CheckNonTimeStamp" IsChecked="False" Checked="CheckNonTimeStamp_Checked" Unchecked="CheckNonTimeStamp_Unchecked"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="27" Margin="437,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="TextSample" Text="16384" TextChanged="TextSample_TextChanged" />
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="27" Margin="437,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="TextSample" Text="16384"/>
         <Label Content="Sample" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="336,162,0,0"/>
+        <Button Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="296" Grid.Column="1" Margin="535,110,0,0" Height="248" Name="ButtonWriteDown" Click="ButtonWriteDown_Click" FontSize="100" />
     </Grid>
 </Window>
