--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,7 +17,7 @@
         <StatusBar HorizontalAlignment="Left" Height="25" Margin="20,470,0,0" VerticalAlignment="Top" Width="805" Grid.ColumnSpan="2">
             <StatusBarItem Content="{Binding StatusText}" Width="805"/>
         </StatusBar>
-        <CheckBox Content="WriteDown" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="613,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckWriteDown"/>
+        <CheckBox Content="NinePoints" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="613,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckNinePoints" Checked="CheckNinePoints_Checked"/>
 
         <CheckBox Content="LockCenter" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="336,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,61,0,0" TextWrapping="Wrap" Text="256" VerticalAlignment="Top" Width="93" Name="textXlock"/>
