--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,7 +12,7 @@
         </Grid.ColumnDefinitions>
 
         <Viewbox HorizontalAlignment="Left" Height="424" Margin="20,20,0,0" VerticalAlignment="Top" Width="512" x:Name="Viewbox1" MouseLeftButtonDown="Viewbox1_MouseLeftButtonDown" Grid.ColumnSpan="2">
-            <Image Source="{Binding ImageSource}" Stretch="UniformToFill"/>
+            <Image Source="{Binding ImageSource}" Stretch="None"/>
         </Viewbox>
         <StatusBar HorizontalAlignment="Left" Height="25" Margin="20,470,0,0" VerticalAlignment="Top" Width="605" Grid.ColumnSpan="2">
             <StatusBarItem Content="{Binding StatusText}" Width="600"/>
@@ -28,16 +28,8 @@
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="27" Margin="437,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="TextSample" Text="16384"/>
         <Label Content="Sample" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="336,162,0,0"/>
         <Button Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="296" Grid.Column="1" Margin="535,100,0,0" Height="71" Name="ButtonWriteDown" Click="ButtonWriteDown_Click" FontSize="50" />
-        
-        
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="58" Margin="385,274,0,0" VerticalAlignment="Top" Width="145" Name="Label0"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="58" Margin="549,274,0,0" VerticalAlignment="Top" Width="131" Name="Label1"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="58" Margin="704,274,0,0" VerticalAlignment="Top" Width="112" Name="Label2"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="60" Margin="385,355,0,0" VerticalAlignment="Top" Width="125" Name="Label3"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="60" Margin="549,355,0,0" VerticalAlignment="Top" Width="111" Name="Label4"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="60" Margin="704,355,0,0" VerticalAlignment="Top" Width="112" Name="Label5"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="61" Margin="385,444,0,0" VerticalAlignment="Top" Width="125" Name="Label6"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="61" Margin="549,444,0,0" VerticalAlignment="Top" Width="111" Name="Label7"/>
-        <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="61" Margin="704,444,0,0" VerticalAlignment="Top" Width="112" Name="Label8"/>
+
+
+        <Label Content="" Grid.Column="1" HorizontalAlignment="Left" Height="321" Margin="385,273,0,0" VerticalAlignment="Top" Width="418" Name="Label0"/>
     </Grid>
 </Window>
