--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,14 +17,17 @@
         <StatusBar HorizontalAlignment="Left" Height="25" Margin="20,470,0,0" VerticalAlignment="Top" Width="605" Grid.ColumnSpan="2">
             <StatusBarItem Content="{Binding StatusText}" Width="600"/>
         </StatusBar>
+        <CheckBox Content="NinePoints" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="613,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckNinePoints" Checked="CheckNinePoints_Checked"/>
 
         <CheckBox Content="LockCenter" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="336,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,61,0,0" TextWrapping="Wrap" Text="256" VerticalAlignment="Top" Width="93" Name="textXlock"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,110,0,0" TextWrapping="Wrap" Text="212" VerticalAlignment="Top" Width="93" Name="textYlock"/>
         <Label Content="X" Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="336,61,0,0" VerticalAlignment="Top" Width="81"/>
         <Label Content="Y" Grid.Column="1" HorizontalAlignment="Left" Height="35" Margin="336,110,0,0" VerticalAlignment="Top" Width="81"/>
-        <CheckBox Content="NonTimeStamp" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="582,20,0,0" VerticalAlignment="Top" Width="130" Name="CheckNonTimeStamp" IsChecked="False" Checked="CheckNonTimeStamp_Checked" Unchecked="CheckNonTimeStamp_Unchecked"/>
-        <Button Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="296" Grid.Column="1" Margin="545,61,0,0" Height="71" Name="ButtonWriteDown" Click="ButtonWriteDown_Click" FontSize="50" />
+        <CheckBox Content="NonTimeStamp" Grid.Column="1" HorizontalAlignment="Left" Height="57" Margin="613,61,0,0" VerticalAlignment="Top" Width="130" Name="CheckNonTimeStamp" IsChecked="False" Checked="CheckNonTimeStamp_Checked" Unchecked="CheckNonTimeStamp_Unchecked"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="27" Margin="437,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Name="TextSample" Text="16384"/>
+        <Label Content="Sample" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="336,162,0,0"/>
+        <Button Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="296" Grid.Column="1" Margin="535,100,0,0" Height="71" Name="ButtonWriteDown" Click="ButtonWriteDown_Click" FontSize="50" />
         
         
         <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Height="58" Margin="385,274,0,0" VerticalAlignment="Top" Width="145" Name="Label0"/>
