--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,14 +11,14 @@
             <ColumnDefinition Width="841*"/>
         </Grid.ColumnDefinitions>
 
-        <Viewbox HorizontalAlignment="Left" Height="424" Margin="20,20,0,0" VerticalAlignment="Top" Width="512" x:Name="Viewbox1" MouseLeftButtonDown="Viewbox1_MouseLeftButtonDown" Grid.ColumnSpan="2">
+        <Viewbox HorizontalAlignment="Left" Height="424" Margin="20,20,0,0" VerticalAlignment="Top" Width="512" x:Name="Viewbox1" Grid.ColumnSpan="2">
             <Image Source="{Binding ImageSource}" Stretch="UniformToFill"/>
         </Viewbox>
         <StatusBar HorizontalAlignment="Left" Height="25" Margin="20,470,0,0" VerticalAlignment="Top" Width="605" Grid.ColumnSpan="2">
             <StatusBarItem Content="{Binding StatusText}" Width="600"/>
         </StatusBar>
 
-        <CheckBox Content="LockCenter" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="336,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter"/>
+        <CheckBox Content="LockCenter" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="336,20,0,0" VerticalAlignment="Top" Width="194" Name="CheckLockCenter" IsChecked="False" Checked="CheckLockCenter_Checked" Unchecked="CheckLockCenter_Unchecked"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,61,0,0" TextWrapping="Wrap" Text="256" VerticalAlignment="Top" Width="93" Name="textXlock"/>
         <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="437,110,0,0" TextWrapping="Wrap" Text="212" VerticalAlignment="Top" Width="93" Name="textYlock"/>
         <Label Content="X" Grid.Column="1" HorizontalAlignment="Left" Height="29" Margin="336,61,0,0" VerticalAlignment="Top" Width="81"/>
